# Forecast-machine

./: README.md  V3_partie_1.py  V3_partie_2.py  V4.py  _init_.py  app.py  code.py  file_processing.py  forecasting_methods.py  interface_mise_a_jourV2.py  pyproject.toml  requirements.txt  requirements.txt.txt  utils.py
