[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-forecast-app"
version = "0.1.0"
description = "Sales Forecasting Application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "openpyxl",
    "statsmodels",
    "scikit-learn",
    "plotly"
]

[tool.setuptools]
packages = ["sales_forecast_app"]